// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Uniswap V2 and V3 Tests: Mixing V2 and V3 with Narwhal Router. gas: V2, then V3 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 189644,
}
`;

exports[`Uniswap V2 and V3 Tests: Mixing V2 and V3 with Narwhal Router. gas: V3, then V2 1`] = `
Object {
  "calldataByteLength": 740,
  "gasUsed": 180436,
}
`;

exports[`Uniswap V2 and V3 Tests: Mixing V2 and V3 with Narwhal Router. gas: split V2 and V3, one hop 1`] = `
Object {
  "calldataByteLength": 900,
  "gasUsed": 293282,
}
`;

exports[`Uniswap V2 and V3 Tests: Mixing V2 and V3 with Router02. gas: V2, then V3 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 214826,
}
`;

exports[`Uniswap V2 and V3 Tests: Mixing V2 and V3 with Router02. gas: V3, then V2 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 218356,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 108059,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 612,
  "gasUsed": 101313,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn, one trade, one hop, no deadline 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 101103,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 676,
  "gasUsed": 240694,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn, one trade, three hops, no deadline 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 240484,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 644,
  "gasUsed": 172687,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactOut ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 772,
  "gasUsed": 125230,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 101485,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 548,
  "gasUsed": 246629,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Narwhal Router. gas: exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 175767,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Router02. gas: exactIn ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 124889,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Router02. gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 121407,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Router02. gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 452,
  "gasUsed": 193278,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Router02. gas: exactOut ETH, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 580,
  "gasUsed": 122933,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV2 with Router02. gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 122001,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 98011,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 251636,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 173786,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 108082,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 412461,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Narwhal Router. gas: exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 516,
  "gasUsed": 305188,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactIn, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 104733,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactIn, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 284015,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactIn, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 196837,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactOut, one trade, one hop 1`] = `
Object {
  "calldataByteLength": 420,
  "gasUsed": 114904,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactOut, one trade, three hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 423372,
}
`;

exports[`Uniswap V2 and V3 Tests: Trade on UniswapV3 with Router02. gas: exactOut, one trade, two hops 1`] = `
Object {
  "calldataByteLength": 484,
  "gasUsed": 313985,
}
`;
